// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createMySQLInstanceEntity should convert to entity 1`] = `
{
  "_class": [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "MYSQL_5_7",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "rootPassword": "some-password",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": [],
          "availabilityType": "ZONAL",
          "backupConfiguration": {
            "backupRetentionSettings": {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": {
            "authorizedNetworks": [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_mysql_instance",
  "authorizedNetworks": [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": false,
  "hasRootPassword": true,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "localInfile": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "requireSSL": undefined,
  "skipShowDatabase": undefined,
}
`;

exports[`#createMySQLInstanceEntity should convert to entity with localInfile param set to off 1`] = `
{
  "_class": [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "MYSQL_5_7",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": {
          "databaseFlags": [
            {
              "name": "local_infile",
              "value": "off",
            },
          ],
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_mysql_instance",
  "authorizedNetworks": [],
  "automatedBackupsEnabled": undefined,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": false,
  "hasRootPassword": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "localInfile": "off",
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "requireSSL": undefined,
  "skipShowDatabase": undefined,
}
`;

exports[`#createMySQLInstanceEntity should convert to entity with requireSSL param set to true 1`] = `
{
  "_class": [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "MYSQL_5_7",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": {
          "ipConfiguration": {
            "requireSsl": true,
          },
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_mysql_instance",
  "authorizedNetworks": [],
  "automatedBackupsEnabled": undefined,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": false,
  "hasRootPassword": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "localInfile": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "requireSSL": true,
  "skipShowDatabase": undefined,
}
`;

exports[`#createMySQLInstanceEntity should parse/store the ip addresses values 1`] = `
{
  "_class": [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "MYSQL_5_7",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": [
          {
            "ipAddress": "1.2.3.4",
            "type": "PRIMARY",
          },
          {
            "ipAddress": "10.0.0.1",
            "type": "PRIVATE",
          },
          {
            "ipAddress": "20.0.0.1",
            "type": "OUTGOING",
          },
        ],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": [],
          "availabilityType": "ZONAL",
          "backupConfiguration": {
            "backupRetentionSettings": {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": {
            "authorizedNetworks": [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_mysql_instance",
  "authorizedNetworks": [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": true,
  "hasRootPassword": false,
  "ipAddresses": [
    "1.2.3.4",
    "10.0.0.1",
    "20.0.0.1",
  ],
  "kmsKeyName": undefined,
  "localInfile": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": [
    "20.0.0.1",
  ],
  "primaryIpAddresses": [
    "1.2.3.4",
  ],
  "privateIpAddresses": [
    "10.0.0.1",
  ],
  "requireSSL": undefined,
  "skipShowDatabase": undefined,
}
`;

exports[`#createPostgresInstanceEntity should convert to entity 1`] = `
{
  "_class": [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "POSTGRES_12",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": [],
          "availabilityType": "ZONAL",
          "backupConfiguration": {
            "backupRetentionSettings": {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": {
            "authorizedNetworks": [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_postgres_instance",
  "authorizedNetworks": [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "logCheckpoints": undefined,
  "logConnections": undefined,
  "logDisconnections": undefined,
  "logDuration": undefined,
  "logErrorVerbosity": undefined,
  "logExecutorStats": undefined,
  "logHostname": undefined,
  "logLockWaits": undefined,
  "logMinDurationStatement": undefined,
  "logMinErrorStatement": undefined,
  "logMinMessages": undefined,
  "logParserStats": undefined,
  "logPlannerStats": undefined,
  "logStatement": undefined,
  "logStatementStats": undefined,
  "logTempFiles": undefined,
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "requireSSL": undefined,
}
`;

exports[`#createPostgresInstanceEntity should convert to entity with logCheckpoints param set to off 1`] = `
{
  "_class": [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "POSTGRES_12",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": {
          "databaseFlags": [
            {
              "name": "log_checkpoints",
              "value": "off",
            },
          ],
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_postgres_instance",
  "authorizedNetworks": [],
  "automatedBackupsEnabled": undefined,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "logCheckpoints": "off",
  "logConnections": undefined,
  "logDisconnections": undefined,
  "logDuration": undefined,
  "logErrorVerbosity": undefined,
  "logExecutorStats": undefined,
  "logHostname": undefined,
  "logLockWaits": undefined,
  "logMinDurationStatement": undefined,
  "logMinErrorStatement": undefined,
  "logMinMessages": undefined,
  "logParserStats": undefined,
  "logPlannerStats": undefined,
  "logStatement": undefined,
  "logStatementStats": undefined,
  "logTempFiles": undefined,
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "requireSSL": undefined,
}
`;

exports[`#createPostgresInstanceEntity should parse/store the ip addresses values 1`] = `
{
  "_class": [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "POSTGRES_12",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": [
          {
            "ipAddress": "1.2.3.4",
            "type": "PRIMARY",
          },
          {
            "ipAddress": "10.0.0.1",
            "type": "PRIVATE",
          },
          {
            "ipAddress": "20.0.0.1",
            "type": "OUTGOING",
          },
        ],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": [],
          "availabilityType": "ZONAL",
          "backupConfiguration": {
            "backupRetentionSettings": {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": {
            "authorizedNetworks": [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_postgres_instance",
  "authorizedNetworks": [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": true,
  "ipAddresses": [
    "1.2.3.4",
    "10.0.0.1",
    "20.0.0.1",
  ],
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "logCheckpoints": undefined,
  "logConnections": undefined,
  "logDisconnections": undefined,
  "logDuration": undefined,
  "logErrorVerbosity": undefined,
  "logExecutorStats": undefined,
  "logHostname": undefined,
  "logLockWaits": undefined,
  "logMinDurationStatement": undefined,
  "logMinErrorStatement": undefined,
  "logMinMessages": undefined,
  "logParserStats": undefined,
  "logPlannerStats": undefined,
  "logStatement": undefined,
  "logStatementStats": undefined,
  "logTempFiles": undefined,
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": [
    "20.0.0.1",
  ],
  "primaryIpAddresses": [
    "1.2.3.4",
  ],
  "privateIpAddresses": [
    "10.0.0.1",
  ],
  "requireSSL": undefined,
}
`;

exports[`#createSQLServerInstanceEntity should convert to entity 1`] = `
{
  "_class": [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "SQLSERVER_2017_STANDARD",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": [],
          "availabilityType": "ZONAL",
          "backupConfiguration": {
            "backupRetentionSettings": {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": {
            "authorizedNetworks": [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_sql_server_instance",
  "authorizedNetworks": [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "containedDatabaseAuthentication": undefined,
  "createdOn": undefined,
  "crossDatabaseOwnershipChaining": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "externalScriptsEnabled": undefined,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "remoteAccess": undefined,
  "requireSSL": undefined,
  "traceFlag": undefined,
  "userConnections": undefined,
  "userOptions": undefined,
}
`;

exports[`#createSQLServerInstanceEntity should convert to entity with crossDbOwnershipChaining param set to on 1`] = `
{
  "_class": [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "SQLSERVER_2017_STANDARD",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": {
          "databaseFlags": [
            {
              "name": "cross db ownership chaining",
              "value": "on",
            },
          ],
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_sql_server_instance",
  "authorizedNetworks": [],
  "automatedBackupsEnabled": undefined,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "containedDatabaseAuthentication": undefined,
  "createdOn": undefined,
  "crossDatabaseOwnershipChaining": "on",
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "externalScriptsEnabled": undefined,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "remoteAccess": undefined,
  "requireSSL": undefined,
  "traceFlag": undefined,
  "userConnections": undefined,
  "userOptions": undefined,
}
`;

exports[`#createSQLServerInstanceEntity should parse/store the ip addresses values 1`] = `
{
  "_class": [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "SQLSERVER_2017_STANDARD",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": [
          {
            "ipAddress": "1.2.3.4",
            "type": "PRIMARY",
          },
          {
            "ipAddress": "10.0.0.1",
            "type": "PRIVATE",
          },
          {
            "ipAddress": "20.0.0.1",
            "type": "OUTGOING",
          },
        ],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": [],
          "availabilityType": "ZONAL",
          "backupConfiguration": {
            "backupRetentionSettings": {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": {
            "authorizedNetworks": [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_postgres_instance",
  "authorizedNetworks": [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": true,
  "ipAddresses": [
    "1.2.3.4",
    "10.0.0.1",
    "20.0.0.1",
  ],
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "logCheckpoints": undefined,
  "logConnections": undefined,
  "logDisconnections": undefined,
  "logDuration": undefined,
  "logErrorVerbosity": undefined,
  "logExecutorStats": undefined,
  "logHostname": undefined,
  "logLockWaits": undefined,
  "logMinDurationStatement": undefined,
  "logMinErrorStatement": undefined,
  "logMinMessages": undefined,
  "logParserStats": undefined,
  "logPlannerStats": undefined,
  "logStatement": undefined,
  "logStatementStats": undefined,
  "logTempFiles": undefined,
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": [
    "20.0.0.1",
  ],
  "primaryIpAddresses": [
    "1.2.3.4",
  ],
  "privateIpAddresses": [
    "10.0.0.1",
  ],
  "requireSSL": undefined,
}
`;
